# PyCNO

./: README.md  example_script.py  functions.py  new.sbml  pyproject.toml  runPBPK.py
background_methodology/: Ac225_sValueFormalism.ipynb  Lu177_sValueFormalism.ipynb
examples/: Output.sbml  PKPD_couple.ipynb  example_script.ipynb  getting_started.ipynb
matlab/: SBMLConversion.m
model/: PSMAModel.sbml  SBMLConversion.m  VerifyModel.m
src/pyCNO/: __init__.py  example_script.py  functions.py
src/pyCNO/models/: PBPK_177Lu_PSMA.sbml
src/pycno/: __init__.py  functions.py
src/pycno/modeling/: functions.py
src/pycno/models/: 260511_pkpd_coupled.sbml  PSMA.sbml  reduced.sbml
src/pycno/utils/: jax_conversion.py
testing/: PKPD_couple.ipynb
