[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "pycno"
version = "0.1.0"
description = "Physiologically based pharmacokinetic (PBPK) modeling utilities for Python"
readme = "README.md"
requires-python = "<3.14"
authors = [
    { name = "James Fowler", email = "jfowler@bccrc.ca" }
]

dependencies = [
  "numpy>=1.22",
  "tqdm>=4.64",
  "python-libsbml>=5.20",
  "libroadrunner>=2.5",
]

[tool.hatch.build]
source-directory = "src"

[project.urls]
Homepage = "https://github.com/qurit/PyCNO"
Repository = "https://github.com/qurit/PyCNO"
Issues = "https://github.com/qurit/PyCNO/issues"